nginx-deployment/nginx-ingress.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default  # Set the namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Define the Ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - test.local.com  # Host for which the TLS certificate is issued
    secretName: test-local-com-tls  # Secret where the TLS cert is stored
  rules:
  - host: test.local.com  # Ensure this matches your DNS or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
